# logic_trainer

./: README.md  logic-trainer.cabal  stack.yaml
frontend/: index.html
src/: Logic.hs  Main.hs  Server.hs  json_specification.txt
