name:                logic-trainer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/RomanRiesen/logic-trainer#readme
license:             BSD3
license-file:        README.md
author:              Roman
maintainer:          Roman.Riesen42@gmail.com
copyright:           2019 Roman
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, src/Logic.hs

executable logic-trainer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, containers, parsec
  other-modules:       Logic
